--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -9,21 +9,31 @@
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css"/>
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
 <body>
+  <!--container-->
+  <div class="container">
 
-  Improve your front-end skills by building projects
+    <div class="img">
+        <img alt="qr code image" src="images/image-qr-code.png" >
+    </div>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+    <div class="text">
+  <div><p id="p1">Improve your front-end skills by building projects</p></div>
+  <div><p id="p2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p></div>
+   
+
   
+   <!--footer-->
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/Mallikarjun-Karalatti/qr-code-component-main--1-" target="_blank">Mallikarjun</a>.</p>
+    </div>
+
+  </div>
   </div>
 </body>
 </html>
