--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -15,8 +15,9 @@
 </head>
 <body>
   <!--container-->
-  <div class="container">
+  <!--<div class="container">-->
 
+   <main>
     <div class="img">
         <img alt="qr code image" src="images/image-qr-code.png" >
     </div>
@@ -34,6 +35,8 @@
     </div>
 
   </div>
-  </div>
+  </main>
+  
+  <!--</div>-->
 </body>
 </html>
