--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-  <h1 .hidden>QR code </h1>
+  <header><h1 .hidden>QR code </h1></header>
   <!--container-->
   <!--<div class="container">-->
 
@@ -26,18 +26,14 @@
     <div class="text">
   <div><p id="p1">Improve your front-end skills by building projects</p></div>
   <div><p id="p2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p></div>
-   
-
-  
+    </main>
    <!--footer-->
+   <footer></footer>
   <div class="attribution">
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/Mallikarjun-Karalatti/qr-code-component-main--1-" target="_blank">Mallikarjun</a>.</p>
     </div>
-
-  </div>
-  </main>
-  
+  </footer>
   <!--</div>-->
 </body>
 </html>
